--- a/css/style.css
+++ b/css/style.css
@@ -209,12 +209,12 @@ transform: translateY(-12%);
 }
 .navbar-light .navbar-toggler 
 {
-        color: rgba(0,0,0,0);
+    color: #fff;
         border-color: rgba(0,0,0,0);
 }
 .navbar-toggler i
 {
-    color: black;
+    color: #fff;
     transition: color .3s;
 }
 .navbar-toggler i:hover
@@ -254,7 +254,7 @@ header .slider h1
 0%
 {
     transform: translatex(900px);
-    opacity: .5;
+    opacity: 0;
 }
 100%
 {
@@ -410,13 +410,14 @@ header .carousel-control-next:hover i
     background-color:#f25454;
     box-shadow: 1px 1px 0;
     box-shadow: 0px .2px 2px 0px rgba(0,0,0,0.5);
+    height: 6px ;
 }
 .bar1::after
 {
     content: "80%";
     position: absolute;
     right: 0;
-    bottom: 200%;
+    bottom: 230%;
     color: black;
 }
 .bar2::after
@@ -424,7 +425,7 @@ header .carousel-control-next:hover i
     content: "95%";
     position: absolute;
     right: 0;
-    bottom: 200%;
+    bottom: 230%;
     color: black;
 }
 .bar3::after
@@ -432,7 +433,7 @@ header .carousel-control-next:hover i
     content: "85%";
     position: absolute;
     right: 0;
-    bottom: 200%;
+    bottom: 230%;
     color: black;
 }
 .bar4::after
@@ -440,15 +441,24 @@ header .carousel-control-next:hover i
     content: "70%";
     position: absolute;
     right: 0;
-    bottom: 200%;
+    bottom: 230%;
     color: black;
+}
+.about .progress .animateMe
+{
+    animation:progressbar 1.5s ease-out,progress-bar-stripes .5s 1.5s linear infinite ;
+}
+
+@keyframes progressbar
+{
+  0%{width: 25%;}
 }
 /* ---End Of About---- */
 
 /* ---Team---- */
 .team .end-part .item .caption .overlay
 {
-    background-color: rgba(242, 84, 84, 0.85);
+    background-color: rgba(242, 84, 84, 0.6);
     width: 100%;
     height: 100%;
     top:5%;
@@ -509,16 +519,14 @@ background-color: #f25454c2;
 .services .service
 {
 transition:background-color .4s , box-shadow .4S;
-box-shadow:0rem .125rem .25rem rgba(0,0,0,.055) ;
-
+box-shadow:0rem .1rem .25rem rgba(0,0,0,.055) ;
 padding: 12;
 border-radius: 5px;
-
 }
 .services .service:hover
 {
     background-color: #fff;
-    box-shadow:.2rem .25rem .25rem rgba(0,0,0,.065) ;
+    box-shadow:.15rem .2rem .25rem rgba(0,0,0,.065) ;
 }
 .services .end-part .service h3
 {
@@ -753,6 +761,11 @@ visibility: hidden;
     {
         width: 100%;
     }
+    .toggleBar
+    {
+        display: none !important;
+    }
+
 }
 @media all and (max-width:768px)
 {
